--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       <li>Vagrant</li>
       <li>Docker</li>
       <li>Ansible</li>
-      <li>Integración Continua</li>
+      <li>
+        Integración Continua: Madurez y Productividad en el desarrollo de
+        software
+      </li>
     </ul>
   </body>
 </html>
