--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Integración Continua: Madurez y Productividad en el desarrollo de
         software
       </li>
-      <li>Kubernetes</li>
+      <li>Kubernetes: Introduccion a la orquestacion de containers</li>
     </ul>
   </body>
 </html>
