--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
       <li>Vagrant: Gerenciando maquinas virtuales</li>
       <li>Docker: Creando containers sin dolores de cabeza</li>
-      <li>Ansible</li>
+      <li>Ansible: Su infraestructura como código</li>
       <li>
         Integración Continua: Madurez y Productividad en el desarrollo de
         software
